--- a/404.html
+++ b/404.html
@@ -1,24 +1,29 @@
 ---
 layout: default
+title: 404
 ---
 
 <style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
+ #err404 {
+     margin: 10px auto;
+     max-width: 600px;
+     text-align: center;
+ }
+ #err404 h2 {
+     margin: 40px 0;
+     font-size: 5rem;
+     line-height: 1;
+     font-weight: normal;
+     font-family: concourse-t2, sans-serif !important;
+ }
+ #err404 p {
+     margin-bottom: 80px;
+     font-size: 24px;
+ }
 </style>
 
-<div class="container">
-  <h1>404</h1>
+<div id="err404">
+  <h2>404</h2>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p>Sorry, that page doesn't exist.</p>
 </div>
